<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="30dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="174dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:letterSpacing=".1"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="40dp"
        android:textStyle="normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        app:hintTextAppearance="@style/TextBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:hintTextAppearance="@style/TextBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:hintTextAppearance="@style/TextBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:entries="@array/roles"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient"
        android:backgroundTint="@null"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="#4E4E4E" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"

        android:gravity="center"
        android:shadowColor="#673AB7"
        android:text="@string/login_now"
        android:textColor="#FF5722"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="103dp" />

    <ImageButton
        android:id="@+id/home_Btn"
        android:layout_width="107dp"
        android:layout_height="94dp"
        android:backgroundTint="#00D84C4C"
        android:scaleType="fitCenter"

        app:srcCompat="@drawable/but" />


</LinearLayout>